--- a/index.html
+++ b/index.html
@@ -1,21 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>groen kieven</title>
+    <title>Groen Kieven</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>groen kieven</h1>
-    <h2>ook smoken kan duurzaam!</p>
-    <p>de coffeeshops van relax hebben milieuvriendelijke maatregelen genomen. 
-        Zo hebben ze het gebruik van plastic verboden en gebruiken ze in plaats daarvan papieren kokers voor hun pre-rolls,
-         papieren zakken en ongebleekte vloei. 
-         de wiet- en hasjzakjes van relax zijn ook biologisch afbreekbaar en 
-         gebruiken ze alleen metalen grinders, waardoor hun ecologische voetafdruk verder wordt verkleind. 
-         Door prioriteit te geven aan deze milieuvriendelijke initiatieven, 
-         zorgen ze ervoor dat elke aankoop in onze coffeeshop duurzaam is.</p>
- 
-</body>
-</html>  
+  <main>
+    <header>
+        <nav>
+            <div class="navbar">
+                <a href="index.html">home</a>
+                <a href="specialisatie.html">specialisatie</a>
+                <a href="locatie.html">locatie</a>
+                <a href="overons.html">over ons</a>
+                <img class="logo" src="img/logo.png" alt="logo">
+            </div>
+        </nav>
+    </header>
+    <h1>Ook smoken kan zeker weten groen!</h1>
+      <img class=store src="img/store.jpg" alt="winkel">
+      <p> De coffeeshops van relax hebben milieuvriendelijke maatregelen genomen.
+          Zo hebben ze het gebruik van plastic verboden en gebruiken ze in plaats daarvan papieren kokers voor hun pre-rolls,
+          papieren zakken en ongebleekte vloei.
+       </p>
+     </main>
+ <footer>
+    <h2>meer duurzaamheid! </h2>
+    <img class="winkel" src="img/store-2.jpeg" alt="winkel zuid">
+    <p>ook gebruiken wij alleen metalen en afbreekbaren materialen voor onze producten , 
+        en zijn wij voorlopend op de rest van de coffeeshops in nedreland.
+    </p>
+    <img class="poster" src="img/poster.jpeg" alt="muur poster">
+    <p>wij proberen onze ecologische afdruk weg te halen en het rond sliegren van kokers en
+         plasticzakjes weg te halen en de slechte naam van smoken weg te halen!
+    </p>
+    <h3>gesponsord door: brita J, lam N, nina H, joep G,susan C, rafi I en teslotte milan van tongeren</h3>
+   <img class="logoo" src="img/logo.png" alt="logo">
+ </footer>
+ </body>  
+</html>
+
