--- a/locatie.html
+++ b/locatie.html
@@ -1,8 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>groen kieven</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet">
 </head>
+<body>
+    <header>
+        <nav>
+            <div class="navbar">
+                <a href="index.html">home</a>
+                <a href="specialisatie.html">specialisatie</a>
+                <a href="locatie.html">locatie</a>
+                <a href="overons.html">over ons</a>
+                <img class="logo" src="img/logo.png" alt="logo">
+            </div>
+        </nav>
+   </header>
+  <main>
+     <h1>onze locaties!</h1>
+     <iframe src="https://www.google.com/maps/d/embed?mid=1y-r0ZB2xwlQNkAjv5LJlROLgP7RhOtc&ehbc=2E312F" width="640" height="480"></iframe>
+     <p>ook is coffeeshop relax een van de enige echt duurzame coffeeshops en hebben ook geen concurrentie.
+     ze hebben 2 locaties alle 2 in Amsterdam</p>
+   </main>
+ <footer> 
+       <h2>contact</h2>
+     <div class="centrum">
+        <img class="zuid" src="img/binnen-winkel.jpeg" alt="binnen in de winkel">
+        <img class="zuid" src="img/binnen-winkel2.jpeg" alt="binnen in de andere locatie">
+    </div>
+    <div class="contact">
+         <ol>
+            <li>Binnen Oranjestraat 9</li>
+            <li>1013 HZ Amsterdam</li>
+            <li>+31 (06) 42476962</li>
+            <li>info@groen-kieven.nl</li>
+         </ol>
+         <ol>
+            <li>Vechtstraat 9</li>
+            <li>1078 RE Amsterdam</li>
+            <li>+31 (06) 188736640</li>
+            <li>info@groen-kieven.nl</li>
+         </ol>
+     </div>
+     <h3>gesponsord door: brita J, lam N, nina H, joep G,susan C, rafi I en teslotte milan van tongeren</h3>
+   <img class="logoo" src="img/logo.png" alt="logo">
+ </footer>
+</body>
