--- a/overons.html
+++ b/overons.html
@@ -5,4 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>groen kieven</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet">
 </head>
+<body>
+      <header>
+        <nav>
+            <div class="navbar">
+                <a href="index.html">home</a>
+                <a href="specialisatie.html">specialisatie</a>
+                <a href="locatie.html">locatie</a>
+                <a href="overons.html">over ons</a>
+                <img class="logo" src="img/logo.png" alt="logo">
+            </div>
+        </nav>
+    </header>
+    <main>
+       <h1>meer over ons!</h1>
+         <img class="binnen" src="img/binnen-zitten.jpeg" alt="binnen plekken">
+         <p>Relax is een kleine coffeeshop met een huiselijke ongedwongen sfeer in de gezelligste buurt van Amsterdam de Jordaan 
+          Coffeeshop Relax in Amsterdam bestaat al meer dan 30 jaar. 
+          Wij hebben één van de grootste assortimenten voorgedraaide joints van Amsterdam en omstreken / Nederland. 
+          En niet alleen om te roken, maar ook voor een heerlijk bakje koffie kun je bij ons terecht.
+         </p>
+    </main>
+ <footer>
+   <img class="poes" src="img/poes.png" alt="poes foto">                                                                                                              
+   <p>bij ons kan je ook lekker binnen zitten en een lekker kopje koffee of thee drinken met een kleine snack erbij.                                                  
+    we hebben een gezellig sfeer binnen. we hebben ook heel gezellig onze poes:jonko binnen zitten die alle klanten altijd vriendelijk groet als ze binnen komen lopen!
+   </p>
+   <h3>gesponsord door: brita J, lam N, nina H, joep G,susan C, rafi I en teslotte milan van tongeren</h3>
+   <img class="logoo" src="img/logo.png" alt="logo">
+</footer>
+</body>
+</html>
