--- a/specialisatie.html
+++ b/specialisatie.html
@@ -5,4 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>groen kieven</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet">
 </head>
+<body>
+    <header>
+        <nav>
+            <div class="navbar">
+               <a href="index.html">home</a>
+               <a href="specialisatie.html">specialisatie</a>
+               <a href="locatie.html">locatie</a>
+               <a href="overons.html">over ons</a>
+              <img class="logo" src="img/logo.png" alt="logo">
+            </div>
+        </nav>
+     </header>
+        <main>
+      <h1>meer in deepte over onze producten!</h1>
+      <img src="img/bekers.png" alt="bekers op het raam ">
+        <p>de wiet- en hasjzakjes van relax zijn ook biologisch afbreekbaar en gebruiken ze alleen metalen grinders,
+             waardoor hun ecologische voetafdruk verder wordt verkleind. 
+             Door prioriteit te geven aan deze milieuvriendelijke initiatieven, zorgen ze ervoor dat elke aankoop in onze coffeeshop duurzaam is.</p>
+ </main>
+  <footer>
+    <h2>populair</h2>
+        <img class="producten" src="img/wierie.png" alt="wierie">
+        <img class="producten" src="img/assie.png" alt="assie">
+        <img class="producten" src="img/voories.png" alt="voories">
+        <img class="producten" src="img/spacecake.png" alt="spacecake">
+        <img class="producten" src="img/littie.png" alt="lithanus">
+    <ol>
+        <li>1.ons populairste item is by far onze silverhaze, is het meest bekend en ook van de beste kwaliteit. </li>
+        <li>2.ook een nieuwkomer is de blue sherbet hasj, opkomend maar een klanten favoriet.</li>
+        <li>3.als je beginner bent zijn onze voorgedraaide joints echt iets voor jouw, goed en strak gedraaid,soft maar kan ook zekr sterk!</li>
+        <li>4.onze space cake wordt elke dag vers gebakken en is met de beste ingredienten gemaakt, niet alleengoed effect maar ook een lekker gebakje!</li>
+        <li>5.we hebben ook onze eigen merch gedropt nu! krijg nu met een aankoop boven de €10 een gratis aansteker erbij!</li> 
+    </ol>
+    <h3>gesponsord door: brita J, lam N, nina H, joep G,susan C, rafi I en teslotte milan van tongeren</h3>
+   <img class="logoo" src="img/logo.png" alt="logo">
+  </footer>
+</body>
+
+
